Fix bad text-align in reaction summary (#41)

--- a/css/reaction.css
+++ b/css/reaction.css
@@ -234,7 +234,7 @@ fieldset {
 #login:hover {
   border-color: black;
 }
-#sections td:first-child {
+table.message td:first-child {
   text-align: right;
 }
 .h2 {
